# cargo_service

./: .dockerignore  .env.docker.sample  .env.sample  README.md  docker-compose.yaml  pyproject.toml
cargo/: admin.py  api_views.py  filters.py  models.py  serializers.py  services.py  urls.py
cargo/migrations/: 0001_initial.py
config/: settings.py  urls.py
fixtures/: cars.json
locale/ru/LC_MESSAGES/: django.po
locations/: admin.py  models.py  serializers.py
locations/management/commands/: load_fixtures.py
locations/migrations/: 0001_initial.py
transportation/: admin.py  api_views.py  models.py  serializers.py  tasks.py  urls.py
transportation/management/commands/: fill_cars.py
transportation/migrations/: 0001_initial.py
users/: models.py
users/migrations/: 0001_initial.py
