[tool.poetry]
name = "nearest-car"
version = "0.1.0"
description = ""
authors = ["Victor Volkov <vektorn1212@gmail.com>"]
readme = "README.md"
packages = [{include = "nearest_car"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
django = "^5.0.3"
djangorestframework = "^3.15.1"
psycopg2-binary = "^2.9.9"
django-import-export = "^3.3.7"
geopy = "^2.4.1"
drf-spectacular = "^0.27.1"
django-filter = "^24.2"
celery = "^5.3.6"
django-celery-beat = "^2.6.0"
redis = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
